# grimdm

./: .gitignore  README.md  watchdog.sh
.github/workflows/: deploy.yml
backend/: .dockerignore  .env.example  .gcloudignore  Dockerfile  pyproject.toml
backend/app/: main.py  models.py  session_context.py  story_tracker.py
backend/app/dm_agent/: agent.py
backend/app/game_data/: npcs.json  quests.json  world.json
backend/app/static/: index.html  ui-prototype.html
backend/app/static/css/: game.css
backend/app/static/js/: app.js  audio-mixer.js  game-instruments.js  pcm-player-processor.js  pcm-recorder-processor.js
backend/app/tools/: game.py  music.py  npc_voice.py  player_voice.py  scene.py
deploy/: deploy-dev.sh  deploy-prod.sh  deploy.sh
